--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Resgate</title>
 <link href="css/estilos.css" rel="stylesheet" type="text/css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3541528501194745" crossorigin="anonymous"></script>
 </head>
 
 <body>
